examples/test/testpolicy10245.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10245
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key36: value45
      key39: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value47
          key18: value9
          key11: value14
      podSelector:
        matchLabels:
          key0: value43
